# gh-workflow

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ansible-noop.yml  ansible.yml  json-noop.yml  markdown-noop.yml  rust-noop.yml  rust.yml  shell-noop.yml  typescript-noop.yml  typescript.yml  yaml-noop.yml
src/: lib.rs  macros.rs
src/workflow/: builder.rs  mod.rs
tests/: workflow.rs
