[package]
name = "gh-workflow"
version = "0.0.0"
edition = "2021"

description = "A Rust representation of GitHub Actions workflows"
repository = "https://github.com/jdno/gh-workflow"
license = "MIT OR Apache-2.0"
keywords = [
    "github",
    "model",
    "serde",
]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
