[package]
name = "gh-workflow"
version = "0.0.0"
edition = "2021"

description = "A Rust representation of GitHub Actions workflows"
repository = "https://github.com/jdno/gh-workflow"
license = "MIT OR Apache-2.0"
keywords = [
    "github",
    "model",
    "serde",
]

[features]
default = ["serde"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"], optional = true }

[dev-dependencies]
indoc = "2.0.1"
serde_yaml = "0.9.21"
